<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    android:orientation="vertical"
    tools:context="com.anxell.e5ar.DoorReLockTimeActivity"
    android:keepScreenOn="true">

    <com.anxell.e5ar.custom.MyToolbar
        android:id="@+id/toolbarView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@android:color/white"
        app:leftText="@string/cancel"
        app:leftTextColor="@color/gray4"
        app:rightText="@string/add"
        app:rightTextColor="@color/green"
        app:showLeftText="true"
        app:showRightText="true"
        app:titleText="@string/add_user" />

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/green" />

    <com.anxell.e5ar.custom.MyEditText
        android:id="@+id/id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/characters_16"
        android:maxLength="16"
        app:subject="@string/id" />

    <com.anxell.e5ar.custom.MyEditText
        android:id="@+id/password"
        android:inputType="numberDecimal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:hint="@string/_4_8_digits"
        android:digits="1234567890"
        android:maxLength="8"
        app:subject="@string/password" />

    <com.anxell.e5ar.custom.EditCardView
        android:id="@+id/userCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:hint="@string/_10_digits"
        android:inputType="numberDecimal"
        android:digits="1234567890"
        android:maxLength="10"
        app:subject="@string/Card"
        android:focusable="true"
        android:focusableInTouchMode="true">

    </com.anxell.e5ar.custom.EditCardView>

</LinearLayout>
