<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:keepScreenOn="true">


    <com.anxell.e5ar.custom.FontTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="15dp"
        android:text="@string/recurrent"
        android:textColor="@color/gray2"
        android:textSize="@dimen/text_size_13" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="5dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray1" />

        <com.anxell.e5ar.custom.My2TextView
            android:id="@+id/recurrentStart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:myTitle="@string/start"
            app:value=" "
            app:showIndicator="false"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray1" />

        <com.anxell.e5ar.custom.My2TextView
            android:id="@+id/recurrentEnd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:myTitle="@string/end"
            app:value=" "
            app:showIndicator="false"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray1" />

        <com.anxell.e5ar.custom.My2TextView
            android:id="@+id/recurrentRepeat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:myTitle="@string/repeat"
            app:value="@string/every_week"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray1" />
    </LinearLayout>

</LinearLayout>
