<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    android:orientation="vertical"
    tools:context="com.anxell.e5ar.DoorReLockTimeActivity">

    <com.anxell.e5ar.custom.MyToolbar
        android:id="@+id/toolbarView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@android:color/white"
        app:titleText="@string/door_re_lock_time" />

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/green" />

    <com.anxell.e5ar.custom.MyEditText
        android:id="@+id/sec"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/please_enter_the_number_of_seconds"
        android:inputType="number"
        android:maxLength="4"
        app:subject="@string/edit_door_re_lock_time" />
</LinearLayout>
