<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    android:orientation="vertical"
    tools:context="com.anxell.e5ar.HistoryActivity"
    android:keepScreenOn="true">

    <com.anxell.e5ar.custom.MyToolbar
        android:id="@+id/toolbarView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@android:color/white"
        app:right1Icon="@drawable/research_green"
        app:showRight1Icon="true"
        app:right2Icon="@drawable/export"
        app:showRight2Icon="true"
        app:titleText="@string/history" />

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/green" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#b5b5b5">

        <SearchView
            android:id="@+id/histoy_searchView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:iconifiedByDefault="false"
            android:focusable="false"
            android:divider="@android:color/black"
            android:background="@drawable/bg_search"
            android:queryHint="@string/search" />
    </RelativeLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="13dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:paddingBottom="6dp"
        android:weightSum="10">

        <com.anxell.e5ar.custom.FontTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3.5"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/id"
            android:textColor="@color/gray3"
            android:textSize="@dimen/text_size_13" />

        <com.anxell.e5ar.custom.FontTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3.6"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/date"
            android:textColor="@color/gray3"
            android:textSize="@dimen/text_size_13" />

        <com.anxell.e5ar.custom.FontTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2.9"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/device"
            android:textColor="@color/gray3"
            android:textSize="@dimen/text_size_13" />

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingEnd="20dp"
        android:paddingStart="20dp" />
</LinearLayout>
