<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:keepScreenOn="true">

    <com.anxell.e5ar.custom.FontTextView
        android:id="@+id/hello"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/hello"
        android:textColor="@color/gray4"
        android:textSize="@dimen/text_size_36" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="8dp" />

    <com.anxell.e5ar.custom.FontTextView
        android:id="@+id/welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/welcome"
        android:textColor="@color/gray4"
        android:textSize="@dimen/text_size_16" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="25dp" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:gravity="center_horizontal"
        android:indeterminateDrawable="@drawable/progress_bar_green" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="15dp" />

    <com.anxell.e5ar.custom.FontTextView
        android:id="@+id/searching"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/searching1"
        android:textColor="@color/gray4"
        android:textSize="@dimen/text_size_14" />

</LinearLayout>
